--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Rent-a-Vehicle</title>
+  <title>RentAVehicleNG</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://www.freeiconspng.com/uploads/car-icon-png-3.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <script src="https://code.jquery.com/jquery-1.x-git.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.min.js" type="text/javascript"></script>
   <app-root></app-root>
 </body>
 </html>
